<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/signin"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/don_t_have_an_account_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/_bg__login_button_ek1"
        android:layout_width="301dp"
        android:layout_height="39dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/_bg__login_button_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_phone_string"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/_bg__login_button_ek1"
        app:layout_constraintEnd_toEndOf="@+id/_bg__login_button_ek1"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/_bg__login_button_ek1"
        app:layout_constraintTop_toTopOf="@+id/_bg__login_button_ek1"
        app:layout_constraintVertical_bias="0.41000003" />

    <ImageView
        android:id="@+id/logo_ek1"
        android:layout_width="209dp"
        android:layout_height="271dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_ek1"
        android:src="@drawable/logo_ek1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="309dp"
        android:layout_height="98dp"
        android:layout_marginTop="256dp"
        android:text="@string/welcome_to_vyapaarmate_string"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letsget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/let_s_get_started__string"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/_bg__sign_up_ek1"
        android:layout_width="301dp"
        android:layout_height="39dp"
        android:background="@drawable/_bg__sign_up_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/_bg__login_button_ek1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/logog_p"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:contentDescription="logo"
        android:src="@drawable/google_logo"
        app:layout_constraintBottom_toBottomOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintStart_toStartOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintTop_toTopOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/continue_with_google_string"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintEnd_toEndOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logog_p"
        app:layout_constraintTop_toTopOf="@+id/_bg__sign_up_ek1"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>